<resources>
    <string name="app_name">Feza\'s CV</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Feza Roheel</string>
    <string name="resume_title">CS Student | BS-CS FAST 2021</string>
    <string name="user_address">Lahore,Pakistan </string>
    <string-array name="home">
        <item>Home</item>
        <item>Profile</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_information">Contact Information</string>
    <string name="email">fezaroheel2124@gmail.com</string>
    <string name="Address">Lahore, Pakistan</string>
    <string name="description">Description</string>
    <string name="AboutMe_Title">About Me</string>
    <string name="Question1">Goals and Interests</string>
    <string name="experience">Experience</string>
    <string name="hands_on_skills">Skills</string>
    <string name="phoneNumber">+923218426784</string>
    <string name="Linkedin_IdLink">https://www.linkedin.com/in/feza-roheel-538852192/</string>
    <string name="Linkedin_UserName">Feza Roheel</string>
    <string name="Github_UserName">froheel</string>
    <string name="Github_IdLink">https://github.com/froheel</string>
    <string name="ieee_link">https://ieeexplore.ieee.org/document/7840114</string>
    <string name="StackOverFlow_UserName">Feza Roheel</string>
    <string name="stackOverFlow_IdLink">https://stackoverflow.com/users/11689044/feza-roheel</string>
    <string name="education">Education</string>
    <string name="answer">A creative, strong-willed and hard-working computer programmer dedicated to empower women with technology. Proficient in computer programming and algorithm solving.
        Eager to learn about emerging technologies and develop innovative solutions to real life problems.
    </string>
    <string name="experience_title">Google CodeU Participant</string>
    <string name="experience_description">"Designed and coded a web app in a team of 4 people under the mentorship of a Google engineer using Java, CSS, HTML and JavaScript over 10 weeks."</string>
    <string name="why_i_did_choose_work_1">"\u2713 Because I need to cache the image\n""\u2713 Design pattern - unit testing easier and lesser\n"\u0020 \u0020 "code size than MVP\n""\u2713 Design pattern - Easier for unit testing\n""\u2713 Save data in a local database using Room\n""\u2713 Firebase provides a realtime database and \n"\u0020 \u0020 "backend as a service"

    </string>

    <string name="achievements">Achievements</string>
    <string name="year11">(year)</string>
    <string name="experience_title1">Developer Student Clubs Lead FAST Lahore</string>
    <string name="experience_description1">Selected as a DSC Lead for my campus to organize hands on workshops related to Google technologies and empower students by sharing resources.</string>
    <string name="experience_year1">(year)</string>
    <string name="experience_title2">Google Women Techmakers Scholarship</string>
    <string name="experience_description2">One of the 73 selected women scholars from all across Asia. Invited to the Google office Singapore for a 3 day retreat.</string>
    <string name="experience_year2">Aug 2012 – Jan 2014</string>

    <string name="project_title">CS Opportunities Portal for Pakistani Students</string>
    <string name="project_description">\u2713  Designed and coded a web app in a team of 4 people under the mentorship of a
        Google engineer using Java, CSS, HTML and JavaScript over 10 weeks.
        \n\u2713 Leveraged various Google Cloud APIs, including App Engine and Datastore.
        I designed and coded the Homepage, MessageBoard chat, pagination and
        also worked with BlobStore.
    </string>
    <string name="year">(2019)</string>

    <string name="project_title1">File DataBase System</string>
    <string name="project_description1">"\u2713 Coded using dynamic memory, hash tables and linked lists in C++. \n\u2713 Used linked lists as the collision resolution strategy. \n\u2713 Learnt how to use STL and DS.</string>
    <string name="year1">(2019)</string>
    <string name="project_title2">Smart Restaurant App </string>
    <string name="project_description2">\u2713 Smart way to manage your Restaurant</string>
    <string name="year2">(2019)</string>
    <string name="todo">TODO</string>
    <string name="email_title">Email</string>
    <string name="address_title">Address</string>
    <string name="phone_number_title">Phone Number</string>
    <string name="professional_links_title">Professional Links</string>
    <string name="linkedin_title">Linkedin</string>
    <string name="twitter_title">Twitter</string>
    <string name="stack_overflow_title">Stack Overflow</string>
    <string name="github_title">Github</string>
    <string name="Metric_degree_title">Metric</string>
    <string name="school_name">Central Model school</string>
    <string name="intermediate_title">Cambridge International A Level</string>
    <string name="college_title">Beaconhouse College Campus Lahore</string>
    <string name="graduation_title">Bachelors of Computer Science</string>
    <string name="university_title">National University College of Computer and Emerging Sciences</string>
    <string name="degree_title1">IEEE</string>
    <string name="degree_title2">Degree Title</string>
    <string name="degree_title3">Degree Title</string>
    <string name="school_year">(2014)</string>
    <string name="college_year">(2015 – 2017)</string>
    <string name="university_year">(2017 – 2021)</string>
    <string name="Cgpa">4.0/4.0</string>
    <string name="certification_courses_title">Publications</string>
    <string name="institute_title">A parametric effort estimation model for mobile apps</string>
    <string name="institute_year">(2016)</string>
    <string name="grades">2 A*s and 1 A</string>
    <string name="institute_title1">Institute Title</string>
    <string name="institude_year1">(year)</string>
    <string name="grades1">(grades)</string>
    <string name="institute_title2">Institute Title</string>
    <string name="institute_year2">(year)</string>
    <string name="grades2">(grades)</string>
    <string name="skill_title_1">C++</string>
    <string name="skill_title_2">Java</string>
    <string name="skill_title_3">SQL Server</string>
    <string name="skill_title_4">VB.NET</string>
    <string name="skill_title_5">HTML and CSS</string>
    <string name="projects_title">Projects</string>
    <string name="why_i_did_choose_above_title_0">Why above:</string>
    <string name="why_i_did_choose_above_title_1">Why did I choose to teach:</string>
    <string name="why_i_did_choose_work_2">"\u2713" Teaching does not finish when we give our students the information, it can be acquired from many sources, but the ability to think, reason and criticize can only be incorporated if we foster and encourage them through thick and thin.</string>
    <string name="why_i_did_choose_work_3">"\u2713" Client based company, so considering the requirements from clients and keeping in point latest technology at that time I used above technology stack. </string>
    <string name="company_name1">Google virtual program</string>
    <string name="experience_time1">June 2019 - August 2019</string>
    <string name="worked_on_title">Description:</string>
    <string name="company_name2">Powered by Google Developers</string>
    <string name="experience_time2">August 2019 - August 2020</string>
    <string name="worked_on2">Worked On:</string>
    <string name="company_name3">Google scholarship</string>
    <string name="experience_time3">August 2018 - August 2019</string>
    <string name="worked_on3">Worked On:</string>
    <string name="cocurricular">Co-Curricular Activities</string>
    <string name="cocurr_1_name">KickStart</string>
    <string name="cocurr_2_name">International Women’s Day Lahore, Pakistan</string>
    <string name="cocurr_3_name">Softec FAST</string>
    <string name="cocurr_4_name">Intra FAST programming competition</string>
    <string name="cocurr_1_year">2019</string>
    <string name="cocurr_2_year">2019</string>
    <string name="cocurr_3_year">2019</string>
    <string name="cocurr_4_year">2018</string>
    <string name="cocurr_1_description">Participated in Round D of KickStart</string>
    <string name="cocurr_2_description">Managed it with WTM scholars in a gathering of 60 people in LUMS</string>
    <string name="cocurr_3_description">Deputy Head of Data Science Competition</string>
    <string name="cocurr_4_description">Participated in programming competition organized by ACM</string>
</resources>
