<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:padding="6dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="#FFFFFF"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="0dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:text="@string/cocurricular"
                android:textColor="@color/blackColor"
                android:textSize="18sp"
                app:fontFamily="@font/roboto" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/cocurr_1_description"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5"
                    card_view:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/cocurr_1_year"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    card_view:ignore="MissingConstraints" />


                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:text="@string/cocurr_1_name"
                    android:textColor="@color/blackColor"
                    android:textSize="16sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:ignore="MissingConstraints"
                    card_view:layout_editor_absoluteX="0dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grayColor"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    card_view:ignore="MissingConstraints"
                    card_view:layout_editor_absoluteX="0dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="10dp">


                <TextView
                    android:id="@+id/collegeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/cocurr_2_description"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/intermediate"
                    card_view:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/collegeYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/cocurr_2_year"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/collegeName"
                    card_view:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/intermediate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:text="@string/cocurr_2_name"
                    android:textColor="@color/blackColor"
                    android:textSize="16sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:ignore="MissingConstraints"
                    card_view:layout_editor_absoluteX="0dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/cocurr_3_description"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView12"
                    card_view:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/cocurr_3_year"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10"
                    card_view:ignore="MissingConstraints" />


                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:text="@string/cocurr_3_name"
                    android:textColor="@color/blackColor"
                    android:textSize="16sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:ignore="MissingConstraints"
                    card_view:layout_editor_absoluteX="0dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grayColor"
                    app:layout_constraintTop_toBottomOf="@+id/textView12"
                    card_view:ignore="MissingConstraints"
                    card_view:layout_editor_absoluteX="0dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/cocurr_4_description"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView15"
                    card_view:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/cocurr_4_year"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView13"
                    card_view:ignore="MissingConstraints" />


                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:text="@string/cocurr_4_name"
                    android:textColor="@color/blackColor"
                    android:textSize="16sp"
                    app:fontFamily="@font/roboto"
                    app:layout_constraintTop_toTopOf="parent"
                    card_view:ignore="MissingConstraints"
                    card_view:layout_editor_absoluteX="0dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/grayColor"
                    app:layout_constraintTop_toBottomOf="@+id/textView15"
                    card_view:ignore="MissingConstraints"
                    card_view:layout_editor_absoluteX="0dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>




</LinearLayout>

